WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279569
Stretched image in vertical flexbox disappears
https://bugs.webkit.org/show_bug.cgi?id=279569
Summary
Stretched image in vertical flexbox disappears
fantasai
Reported
2024-09-11 19:20:37 PDT
Created
attachment 472532
[details]
testcase A stretched bitmap image flex item in a row flex container in vertical writing modes disappears for no apparent reason. See testcase.
Attachments
testcase
(178 bytes, text/html)
2024-09-11 19:20 PDT
,
fantasai
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-12 11:51:00 PDT
<
rdar://problem/135897530
>
Karl Dubost
Comment 2
2024-12-17 19:16:17 PST
This affects abnormal active website
https://president.mn/mng/
tracked by
rdar://119196407
Karl Dubost
Comment 3
2024-12-17 19:16:49 PST
both Firefx and Chrome render the image.
Sammy Gill
Comment 4
2025-02-05 11:49:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40073
Sammy Gill
Comment 5
2025-02-05 15:36:17 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/50517
EWS
Comment 6
2025-02-05 18:30:33 PST
Committed
289903@main
(994ec6a36403): <
https://commits.webkit.org/289903@main
> Reviewed commits have been landed. Closing PR #40073 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug